# pocketbase-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: error.rs  lib.rs
src/records/auth/: auth_refresh.rs  auth_refresh_for_user.rs  auth_with_password.rs  impersonate.rs  mod.rs  request_verification.rs
src/records/crud/: create.rs  delete.rs  get_first_list_item.rs  get_full_list.rs  get_list.rs  get_one.rs  mod.rs  update.rs
src/settings/: mod.rs  test_email.rs
