[package]
name = "pocketbase-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Klaus <klaus@fromhorizons.com>"]
repository = "https://github.com/fromhorizons/pocketbase-rs"
description = "A simple wrapper around PocketBase's Rest API. Uses the Builder Pattern."
readme = "README.md"
keywords = ["pocketbase"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["cookies", "json", "multipart"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.41.1", features = ["full"] }
